# plasma

./: README.md
ElectroStatic1D_C/: AmpereVlasov.cxx  AmpereVlasov.h  DhatConsistency.cxx  DhatConsistency.h  InitialIASW.cxx  InitialIASW.h  InitialLandau.cxx  InitialLandau.h  InitialTSI.cxx  InitialTSI.h  LOSolver.h  LOSolverJFNK.cxx  LOSolverJFNK.h  LOSolverSI.cxx  LOSolverSI.h  Makefile  MomentSolution.cxx  MomentSolution.h  NLResidual.cxx  NLResidual.h  OutGnuplot.cxx  OutGnuplot.h  ParticleInitialize.cxx  ParticleInitialize.h  ParticlePush.h  ParticleSolution.cxx  ParticleSolution.h  Particles.cxx  Particles.h  PlasmaData.cxx  PlasmaData.h  PlasmaDriver.cxx  PlasmaOut.h  PlasmaUtility.cxx  Plasma_matlab.txt  PushRayTrace.cxx  PushRayTrace.h  PushRayTrace_backup.cxx  PushRayTrace_backup.h  PushSimple.cxx  (+15 more)
PlasmaApp/: Make.common  Make.local  Makefile  README.md
PlasmaApp/src/Util/IPICAdaptor/: CMakeLists.txt
PlasmaApp/src/Util/IPICAdaptor/.svn/: all-wcprops  entries
PlasmaApp/src/Util/IPICAdaptor/.svn/text-base/: IPICAdaptor.cxx.svn-base  IPICAdaptor.h.svn-base
PlasmaApp3D/: .directory  AmpereSolve.cpp  AmpereSolve.h  CPUTimer.h  ChargeTally.cu  ChargeTally.h  ClusterInfo.cuh  Copy of ParticleObjN.cpp.old  CurrentTally.cu  CurrentTally.h  CurrentTallyCPU.cu  CurrentTallyCPU.h  CurrentTallyGPU.cu  CurrentTallyGPU.cuh  E_vec.csv  ExplicitPIC.cpp  ExplicitPIC.h  FieldData.h  FieldDataCPU.cpp  FieldDataCPU.h  FieldDataCPU2D.cpp  FieldDataCPU2D.h  FieldDataGPU.cu  FieldDataGPU.cuh  FieldSolver.h  HOMoments.cu  HOMoments.h  ImplicitPIC.cpp  ImplicitPIC.h  Makefile  (+46 more)
(+329 files in other folders)
